--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="left"
-        android:background="@color/white"></LinearLayout>
+        android:background="@color/white">
+
+    </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
