--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="content_inset_start">300dp</dimen>
     <dimen name="image_width">100dp</dimen>
+    <dimen name="image_height">100dp</dimen>
 </resources>
