--- a/app/src/main/res/layout/activity_content_game.xml
+++ b/app/src/main/res/layout/activity_content_game.xml
@@ -16,13 +16,29 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
+        <ImageView
+            android:id="@+id/iv_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/left_arrow" />
+
+        <TextView
+            android:id="@+id/tv_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="RAD RODGERS: WORLD ONE 2016"
+            android:textColor="#fff"
+            android:textSize="19sp" />
     </android.support.v7.widget.Toolbar>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:fillViewport="true">
 
         <LinearLayout
+            android:id="@+id/ll_main_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -73,31 +89,50 @@
             </LinearLayout>
 
             <ImageView
-                android:id="@+id/iv_backgroup_game"
-                android:layout_width="wrap_content"
-                android:layout_height="250dp"
-                android:layout_marginTop="10dp"
-                android:scaleType="fitStart"
-                android:src="@drawable/image_backgroup_drawerlayout" />
+                android:id="@+id/iv_image_fisrt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitStart" />
 
             <TextView
-                android:layout_marginTop="10dp"
                 android:id="@+id/tv_content_game"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
+                android:layout_marginTop="10dp"
                 android:text="@string/gameType" />
 
-            <VideoView
+            <com.google.android.youtube.player.YouTubePlayerView
                 android:id="@+id/vv_video_game"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <android.support.v4.view.ViewPager
-                android:id="@+id/iv_view_pager"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"></android.support.v4.view.ViewPager>
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp">
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/iv_view_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="10dp" />
+
+                <com.viewpagerindicator.CirclePageIndicator
+                    android:id="@+id/indicator"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="bottom"
+                    android:padding="5dp"
+                    app:centered="true"
+                    app:fillColor="#fff"
+                    app:pageColor="#a4a3a3"
+                    app:snap="false" />
+            </RelativeLayout>
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -109,10 +144,10 @@
                 android:textSize="18sp" />
 
             <TextView
-                android:layout_marginTop="20dp"
                 android:id="@+id/tv_configuration"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:gravity="center" />
         </LinearLayout>
     </ScrollView>
