--- a/app/src/main/res/layout/activity_content_game.xml
+++ b/app/src/main/res/layout/activity_content_game.xml
@@ -89,10 +89,11 @@
             </LinearLayout>
 
             <ImageView
+                android:layout_marginTop="30dp"
                 android:id="@+id/iv_image_fisrt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:scaleType="fitStart" />
+                android:scaleType="fitCenter" />
 
             <TextView
                 android:id="@+id/tv_content_game"
@@ -106,17 +107,20 @@
             <com.google.android.youtube.player.YouTubePlayerView
                 android:id="@+id/vv_video_game"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp" />
 
             <RelativeLayout
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="220dp"
                 android:layout_marginTop="20dp">
 
                 <android.support.v4.view.ViewPager
                     android:id="@+id/iv_view_pager"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp" />
 
                 <com.viewpagerindicator.CirclePageIndicator
@@ -126,10 +130,10 @@
                     android:layout_alignParentBottom="true"
                     android:layout_centerHorizontal="true"
                     android:gravity="bottom"
-                    android:padding="5dp"
+                    android:padding="10dp"
                     app:centered="true"
                     app:fillColor="#fff"
-                    app:pageColor="#a4a3a3"
+                    app:pageColor="#bcbaba"
                     app:snap="false" />
             </RelativeLayout>
 
