--- a/app/src/main/res/layout/activity_content_game.xml
+++ b/app/src/main/res/layout/activity_content_game.xml
@@ -50,7 +50,7 @@
                 android:gravity="center"
                 android:text="RAD RODGERS: WORLD ONE 2016"
                 android:textColor="#000"
-                android:textSize="18sp" />
+                style="?android:attr/textAppearanceLarge" />
 
             <LinearLayout
                 android:layout_width="match_parent"
