--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
     tools:context="com.example.vaio.learnmoregame.MainActivity">
 
     <LinearLayout
+        android:id="@+id/linear_list_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
