--- a/app/src/main/res/layout/item_listview_drawerlayout.xml
+++ b/app/src/main/res/layout/item_listview_drawerlayout.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"
         android:id="@+id/iv_icon_listview_drawerlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="15dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginTop="15dp"
         android:scaleType="centerInside"
         android:src="@drawable/clock" />
 
     <TextView
-        android:layout_centerVertical="true"
         android:id="@+id/tv_content_listview_drawerlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/iv_icon_listview_drawerlayout"
         android:text="Danh sách xem sau"
@@ -25,13 +25,20 @@
         android:textSize="16sp" />
 
     <TextView
-        android:layout_centerVertical="true"
         android:id="@+id/tv_count_listview_drawerlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
         android:text="10"
         android:textColor="#000"
         android:textSize="16sp" />
+
+    <View
+        android:id="@+id/view_part"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="#000"></View>
 </RelativeLayout>
