chinh lai acivity game vs dang lam drawerlayout

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000</color>
+    <color name="color_ds">#e99048</color>
 </resources>
