--- a/app/src/main/res/layout/item_view_pager_image.xml
+++ b/app/src/main/res/layout/item_view_pager_image.xml
@@ -9,5 +9,5 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
-        android:src="@drawable/image_backgroup_drawerlayout"/>
+        android:background="@drawable/image_backgroup_drawerlayout"/>
 </LinearLayout>
