--- a/app/src/main/res/layout/fragment_open_world_game.xml
+++ b/app/src/main/res/layout/fragment_open_world_game.xml
@@ -17,5 +17,7 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:numColumns="2"></GridView>
+        android:horizontalSpacing="@dimen/activity_horizontal_margin"
+        android:numColumns="2"
+        android:verticalSpacing="@dimen/activity_vertical_margin"></GridView>
 </RelativeLayout>
