--- a/app/src/main/res/layout/item_list_view.xml
+++ b/app/src/main/res/layout/item_list_view.xml
@@ -22,6 +22,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:singleLine="true"
             android:id="@+id/name"
             style="?android:attr/textAppearanceLarge"
             android:layout_width="match_parent"
