--- a/app/src/main/res/layout/item_list_view.xml
+++ b/app/src/main/res/layout/item_list_view.xml
@@ -69,6 +69,12 @@
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:text="@string/views" />
+            <ImageView
+                android:id="@+id/popupMenu"
+                android:scaleType="centerInside"
+                android:src="@drawable/more2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
 
