--- a/app/src/main/res/layout/item_list_view.xml
+++ b/app/src/main/res/layout/item_list_view.xml
@@ -71,9 +71,9 @@
                 android:text="@string/views" />
             <ImageView
                 android:id="@+id/popupMenu"
-                android:scaleType="centerInside"
+                android:scaleType="center"
                 android:src="@drawable/more2"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/icon_more_width"
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
