--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,7 @@
                     android:layout_marginRight="@dimen/activity_horizontal_margin"></ListView>
 
                 <GridView
+                    android:visibility="invisible"
                     android:id="@+id/gridView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
