Hoàn thành search

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000</color>
     <color name="color_ds">#e99048</color>
+    <color name="Blue">#e3f2fd</color>
 </resources>
