--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,8 @@
     <dimen name="image_height">100dp</dimen>
     <dimen name="icon_more_width">25dp</dimen>
     <dimen name="icon_more_height">20dp</dimen>
+    <dimen name="item_list_view_search_width">50dp</dimen>
+    <dimen name="item_list_view_search_image_width">70dp</dimen>
+    <dimen name="activity_main_list_view_height">300dp</dimen>
+    <dimen name="activity_margin_long">40dp</dimen>
 </resources>
