Cơ bản hoàn thành - Cải thiện giao giện -Thêm progress dialog trong lúc load data -Thêm title cho trang chủ , xem sau , yêu thích

--- a/app/src/main/res/layout/item_listview_drawerlayout.xml
+++ b/app/src/main/res/layout/item_listview_drawerlayout.xml
@@ -1,23 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_marginTop="@dimen/activity_vertical_margin"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
+        android:alpha="0.7"
         android:id="@+id/iv_icon_listview_drawerlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:scaleType="centerInside"
-        android:src="@drawable/clock" />
+        android:src="@drawable/ic_watch_later_black_24dp" />
 
     <TextView
         android:id="@+id/tv_content_listview_drawerlayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/iv_icon_listview_drawerlayout"
         android:text="Danh sách xem sau"
@@ -29,16 +28,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
         android:layout_marginRight="10dp"
         android:text="10"
         android:textColor="#000"
         android:textSize="16sp" />
 
     <View
+        android:layout_below="@id/iv_icon_listview_drawerlayout"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:id="@+id/view_part"
-        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="#000"></View>
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"></View>
 </RelativeLayout>
