--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,16 +19,10 @@
             android:layout_height="wrap_content"
             android:background="@color/Indigo600"
             android:gravity="right"
-            android:minHeight="?attr/actionBarSize"
             android:subtitleTextColor="#FFFFFFFF"
+            android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="right"
-                android:orientation="horizontal"></LinearLayout>
         </android.support.v7.widget.Toolbar>
 
         <RelativeLayout
@@ -64,7 +58,7 @@
                 android:id="@+id/fragment_list_drawerlayout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#3dbde7"
+                android:background="@color/white"
                 android:orientation="vertical"
                 android:visibility="invisible">
 
@@ -110,10 +104,11 @@
         <ImageView
             android:id="@+id/iv_drawerlayout"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="160dp"
             android:background="#000000"
-            android:scaleType="fitStart"
-            android:src="@drawable/image_backgroup_drawerlayout" />
+            android:scaleType="fitXY"
+            android:adjustViewBounds="true"
+            android:src="@drawable/bg" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/lv_drawerlayout"
