--- a/app/src/main/res/layout/item_list_view.xml
+++ b/app/src/main/res/layout/item_list_view.xml
@@ -30,13 +30,13 @@
             android:text="@string/gameName" />
 
         <TextView
+            android:singleLine="true"
             android:id="@+id/type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/gameType" />
 
         <LinearLayout
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="3">
@@ -71,11 +71,12 @@
                 android:layout_weight="1"
                 android:text="@string/views" />
             <ImageView
+                android:alpha="0.7"
                 android:id="@+id/popupMenu"
-                android:scaleType="center"
-                android:src="@drawable/more2"
-                android:layout_width="@dimen/icon_more_width"
-                android:layout_height="wrap_content" />
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_more_vert_black_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/icon_more_height" />
         </LinearLayout>
     </LinearLayout>
 
