Cơ bản hoàn thành - Xong phần thay đổi theme -chỉnh lại một chút giao diện
-Cần fix bug xem nội dung khi thiết bị offline

--- a/app/src/main/res/layout/item_list_view.xml
+++ b/app/src/main/res/layout/item_list_view.xml
@@ -37,6 +37,7 @@
             android:text="@string/gameType" />
 
         <LinearLayout
+            android:layout_marginTop="@dimen/activity_margin_short"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="3">
