--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,7 @@
     <dimen name="item_list_view_search_image_width">70dp</dimen>
     <dimen name="activity_main_list_view_height">300dp</dimen>
     <dimen name="activity_margin_long">40dp</dimen>
+    <dimen name="item_list_view_theme_height">50dp</dimen>
+    <dimen name="lv_theme_height">300dp</dimen>
+    <dimen name="activity_margin_short">5dp</dimen>
 </resources>
