--- a/app/src/main/res/layout/dialog_feedback.xml
+++ b/app/src/main/res/layout/dialog_feedback.xml
@@ -8,7 +8,7 @@
         android:id="@+id/edt_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Nhập phản hồi"
+        android:hint="@string/hintFeedback"
         android:inputType="textMultiLine"
         android:maxWidth="300dp" />
 
