--- a/app/src/main/res/layout/dialog_introduction.xml
+++ b/app/src/main/res/layout/dialog_introduction.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_ds"
+        android:background="@color/colorPrimary"
         android:orientation="horizontal">
 
         <ImageView
@@ -33,19 +33,22 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.4"
-        android:background="@color/color_ds"
+        android:layout_weight="1"
+        android:background="@color/colorPrimary"
         android:gravity="center"
-        android:text="Danh sách nhóm"
+        android:text="Learn more game"
         android:textColor="#fff"
         android:textSize="40sp"
         android:textStyle="bold" />
 
     <TextView
+        android:textColor="@color/colorPrimary"
+        style="?android:attr/textAppearanceLarge"
+        android:text="@string/memberList"
         android:id="@+id/tv_list_team"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1.6"
+        android:layout_weight="2"
         android:gravity="center"
         android:textStyle="bold" />
 </LinearLayout>
