--- a/app/src/main/res/layout/item_grid_view.xml
+++ b/app/src/main/res/layout/item_grid_view.xml
@@ -9,14 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher" />
+        android:scaleType="fitCenter" />
 
     <TextView
         android:singleLine="true"
         android:id="@+id/name"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/gameName" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
