--- a/app/src/main/res/layout/item_list_view_search.xml
+++ b/app/src/main/res/layout/item_list_view_search.xml
@@ -5,22 +5,20 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:adjustViewBounds="true"
         android:id="@+id/image"
         android:layout_width="@dimen/item_list_view_search_image_width"
         android:layout_height="match_parent"
-        android:scaleType="centerInside"
-        android:src="@mipmap/ic_launcher" />
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:adjustViewBounds="true"
+        android:scaleType="centerInside" />
 
     <TextView
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
         android:id="@+id/name"
         style="?android:attr/textAppearanceMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:singleLine="true"
-        android:text="@string/app_name" />
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:singleLine="true" />
 </LinearLayout>
