--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,5 @@
     <dimen name="item_list_view_theme_height">50dp</dimen>
     <dimen name="lv_theme_height">300dp</dimen>
     <dimen name="activity_margin_short">5dp</dimen>
+    <dimen name="item_drawable_height">50dp</dimen>
 </resources>
